# x4i

./: .gitattributes  .gitignore  CHANGES.txt  LICENSE.txt  MANIFEST.in  Makefile  PKG-INFO  README.md  install.py  pyproject.toml  requirements.txt  run-tests.sh  setup.py
.github/workflows/: integration_test.yml  python-app.yml
doc/EXFOR/: README.md
doc/x4i/: README.md
doc/x4i/api-doc/: index.html  search.js  x4i.html
doc/x4i/api-doc/x4i/: endl_Z.html  exfor_column_parsing.html  exfor_dataset.html  exfor_dicts.html  exfor_entry.html  exfor_exceptions.html  exfor_field.html  exfor_grammars.html  exfor_manager.html  exfor_particle.html  exfor_reactions.html  exfor_reference.html  exfor_section.html  exfor_subentry.html  exfor_utilities.html  pyparsing.html
doc/x4i/user-guide/: .gitignore  x4i.tex
doc/x4i/user-guide/figs/: vis.tiff
examples/: plotX4.py
src/x4i/: __init__.py  abundance.py  endl_Z.py  exfor_column_transformer.py  exfor_dicts.py  exfor_field.py  exfor_grammars.py  exfor_manager.py  exfor_reactions.py  exfor_section.py  exfor_subentry.py  exfor_units.py
src/x4i/cli/: check-exfor.py  check_exfor.py  exfor2json.py  get-exfor-entry.py  get_exfor_entry.py  install_exfor_db.py  setup-exfor-db-index.py  setup_exfor_db_index.py
src/x4i/data/: EXFOR_master_dictionary.txt  README.md
src/x4i/dicts/: README.md  dict_arc_all.json  exfor_units.csv  make_exfor_unit_csv.py
test/: 12898.x4  test_exfor_fields.py
test/data/db/129/: 12917.x4
test/data/db/219/: 21993.x4
test/data/db/401/: 40177.x4
tests/: E0783.x4  README.md  setup_test_area.py  test_exfor_dataset.py  test_exfor_dicts.py  test_exfor_entry.py  test_exfor_fields.py  test_exfor_full_integration.py  test_exfor_manager.py  test_exfor_units.py
tests/data/: x4doi.txt
tests/data/db/100/: 10001.x4  10036.x4
tests/data/db/101/: 10149.x4  10187.x4
tests/data/db/102/: 10241.x4  10275.x4
tests/data/db/103/: 10315.x4  10316.x4  10355.x4
tests/data/db/105/: 10592.x4
tests/data/db/108/: 10862.x4
tests/data/db/109/: 10903.x4
tests/data/db/110/: 11036.x4  11042.x4  11055.x4  11066.x4  11069.x4  11072.x4  11079.x4  11084.x4  11096.x4
tests/data/db/111/: 11109.x4  11117.x4  11124.x4
tests/data/db/113/: 11314.x4  11321.x4
tests/data/db/123/: 12326.x4
tests/data/db/126/: 12656.x4
tests/data/db/127/: 12780.x4
tests/data/db/131/: 13150.x4
tests/data/db/136/: 13623.x4
tests/data/db/137/: 13787.x4  13793.x4  13795.x4
tests/data/db/138/: 13883.x4
tests/data/db/140/: 14017.x4
tests/data/db/141/: 14129.x4  14160.x4
tests/data/db/203/: 20319.x4  20360.x4  20389.x4
tests/data/db/205/: 20576.x4
tests/data/db/207/: 20778.x4  20795.x4
tests/data/db/209/: 20964.x4
tests/data/db/212/: 21223.x4
tests/data/db/213/: 21365.x4  21367.x4
tests/data/db/217/: 21790.x4  21795.x4
tests/data/db/218/: 21815.x4  21852.x4
x4i/: __init__.py  exfor_column_parsing.py  exfor_column_transformer.py  exfor_dataset.py  exfor_dicts.py  exfor_entry.py  exfor_field.py  exfor_grammars.py  exfor_manager.py  exfor_particle.py  exfor_paths.py  exfor_reactions.py  exfor_reference.py  exfor_units.py  exfor_utilities.py  pyparsing.py
x4i/data/: coupled-entries.pickle  database_info.json  error-entries.pickle  index.tbl  monitored-entries.pickle  reaction-count.pickle
x4i/dicts/: README.md  dict03.txt  dict04.txt  dict05.txt  dict07.txt  dict09.txt  dict18.txt  dict19.txt  dict20.txt  dict21.txt  dict22.txt  dict23.txt  dict24.txt  dict30.txt  dict33.txt  dict34.txt  dict35.txt  dict36.txt  dict37.txt  dict_arc_all.json  exfor-pint-definitions.txt  exfor_units.csv  exfor_units.numbers
x4i/test/: test_exfor_dataset.py  test_exfor_dicts.py  test_exfor_entry.py  test_exfor_fields.py  test_exfor_full_integration.py  test_exfor_manager.py  test_exfor_reaction.py  test_exfor_units.py  utilities.py
(+67 files in other folders)
